api/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    INDIVISIBLE

Grammar

Rule 0     S' -> statement
Rule 1     statement -> <empty>
Rule 2     statement -> TYPE COLON decl_names
Rule 3     decl_names -> NAME decl_names_m
Rule 4     decl_names_m -> COMMA NAME decl_names_m
Rule 5     decl_names_m -> <empty>
Rule 6     statement -> TYPE COLON NAME ASSIGN value
Rule 7     statement -> NAME ASSIGN value
Rule 8     statement -> TYPE NO ARRAY COLON NAME ASSIGN init_array
Rule 9     init_array -> L_C_BRACKET R_C_BRACKET
Rule 10    init_array -> L_C_BRACKET init_array_val R_C_BRACKET
Rule 11    init_array_val -> init_array_val COMMA value
Rule 12    init_array_val -> value
Rule 13    init_array -> L_C_BRACKET value KO NO UNDEF NO VALUE R_C_BRACKET
Rule 14    statement -> NAME L_S_BRACKET value R_S_BRACKET ASSIGN value
Rule 15    statement -> NAME NO END NI value WO ADD
Rule 16    statement -> value WO OUT
Rule 17    params -> <empty>
Rule 18    params -> TYPE COLON NAME params_m
Rule 19    params -> TYPE NO ARRAY COLON NAME params_m
Rule 20    params_m -> COMMA TYPE COLON NAME params_m
Rule 21    params_m -> COMMA TYPE NO ARRAY COLON NAME params_m
Rule 22    params_m -> <empty>
Rule 23    statement -> CIRCLE NAME L_PAREN params R_PAREN
Rule 24    statement -> CIRCLE TYPE COLON NAME L_PAREN params R_PAREN
Rule 25    statement -> CIRCLE TYPE NO ARRAY COLON NAME L_PAREN params R_PAREN
Rule 26    args -> <empty>
Rule 27    args -> value args_m
Rule 28    args_m -> COMMA value args_m
Rule 29    args_m -> <empty>
Rule 30    statement -> NAME L_PAREN args R_PAREN
Rule 31    statement -> NAME ASSIGN NAME L_PAREN args R_PAREN
Rule 32    statement -> TYPE COLON NAME ASSIGN NAME L_PAREN args R_PAREN
Rule 33    statement -> TYPE NO ARRAY COLON NAME ASSIGN NAME L_PAREN args R_PAREN
Rule 34    statement -> NAME NO END NI NAME L_PAREN args R_PAREN NO RETURN_VAL WO ADD
Rule 35    value -> POW L_PAREN args R_PAREN
Rule 36    statement -> RETURN
Rule 37    statement -> RETURN value
Rule 38    statement -> IF L_PAREN conditional R_PAREN
Rule 39    statement -> ELSEIF L_PAREN conditional R_PAREN
Rule 40    statement -> ELSE
Rule 41    statement -> ENDIF
Rule 42    conditional -> value sign value
Rule 43    sign -> EQUAL
Rule 44    sign -> NOT EQUAL
Rule 45    sign -> NOT2
Rule 46    sign -> LESS
Rule 47    sign -> LESS EQUAL
Rule 48    sign -> LESS_EQUAL
Rule 49    sign -> GREATER
Rule 50    sign -> GREATER EQUAL
Rule 51    sign -> GREATER_EQUAL
Rule 52    conditional -> value GA value DE DIVISIBLE
Rule 53    conditional -> value GA value TO value DE DIVISIBLE
Rule 54    statement -> FOR L_PAREN NAME WO value KARA value MADE NUMBER ZUTSU incdec R_PAREN
Rule 55    incdec -> INCREASE
Rule 56    incdec -> DECREASE
Rule 57    statement -> ENDFOR
Rule 58    statement -> WHILE L_PAREN conditional R_PAREN
Rule 59    statement -> DO
Rule 60    value -> NUMBER
Rule 61    value -> FLOAT
Rule 62    value -> NAME
Rule 63    value -> STRING
Rule 64    value -> NAME L_S_BRACKET value R_S_BRACKET
Rule 65    value -> NAME L_S_BRACKET value R_S_BRACKET NO VALUE
Rule 66    value -> NAME NO ARR_LEN
Rule 67    value -> L_PAREN value R_PAREN
Rule 68    value -> L_PAREN value R_PAREN NO RESULT
Rule 69    value -> value PLUS value
Rule 70    value -> value MINUS value
Rule 71    value -> value MULTI value
Rule 72    value -> value DIVID value division_tail
Rule 73    division_tail -> NO SHOW
Rule 74    division_tail -> NO REMAINDER
Rule 75    division_tail -> DIVREAL
Rule 76    division_tail -> <empty>
Rule 77    value -> value NO DECIMAL_P BELOW WO ROUNDED_UP VALUE
Rule 78    value -> L_PAREN value R_PAREN NO DECIMAL_P BELOW WO ROUNDED_UP VALUE

Terminals, with rules where they appear

ADD                  : 15 34
ARRAY                : 8 19 21 25 33
ARR_LEN              : 66
ASSIGN               : 6 7 8 14 31 32 33
BELOW                : 77 78
CIRCLE               : 23 24 25
COLON                : 2 6 8 18 19 20 21 24 25 32 33
COMMA                : 4 11 20 21 28
DE                   : 52 53
DECIMAL_P            : 77 78
DECREASE             : 56
DIVID                : 72
DIVISIBLE            : 52 53
DIVREAL              : 75
DO                   : 59
ELSE                 : 40
ELSEIF               : 39
END                  : 15 34
ENDFOR               : 57
ENDIF                : 41
EQUAL                : 43 44 47 50
FLOAT                : 61
FOR                  : 54
GA                   : 52 53
GREATER              : 49 50
GREATER_EQUAL        : 51
IF                   : 38
INCREASE             : 55
INDIVISIBLE          : 
KARA                 : 54
KO                   : 13
LESS                 : 46 47
LESS_EQUAL           : 48
L_C_BRACKET          : 9 10 13
L_PAREN              : 23 24 25 30 31 32 33 34 35 38 39 54 58 67 68 78
L_S_BRACKET          : 14 64 65
MADE                 : 54
MINUS                : 70
MULTI                : 71
NAME                 : 3 4 6 7 8 14 15 18 19 20 21 23 24 25 30 31 31 32 32 33 33 34 34 54 62 64 65 66
NI                   : 15 34
NO                   : 8 13 13 15 19 21 25 33 34 34 65 66 68 73 74 77 78
NOT                  : 44
NOT2                 : 45
NUMBER               : 54 60
OUT                  : 16
PLUS                 : 69
POW                  : 35
REMAINDER            : 74
RESULT               : 68
RETURN               : 36 37
RETURN_VAL           : 34
ROUNDED_UP           : 77 78
R_C_BRACKET          : 9 10 13
R_PAREN              : 23 24 25 30 31 32 33 34 35 38 39 54 58 67 68 78
R_S_BRACKET          : 14 64 65
SHOW                 : 73
STRING               : 63
TO                   : 53
TYPE                 : 2 6 8 18 19 20 21 24 25 32 33
UNDEF                : 13
VALUE                : 13 65 77 78
WHILE                : 58
WO                   : 15 16 34 54 77 78
ZUTSU                : 54
error                : 

Nonterminals, with rules where they appear

args                 : 30 31 32 33 34 35
args_m               : 27 28
conditional          : 38 39 58
decl_names           : 2
decl_names_m         : 3 4
division_tail        : 72
incdec               : 54
init_array           : 8
init_array_val       : 10 11
params               : 23 24 25
params_m             : 18 19 20 21
sign                 : 42
statement            : 0
value                : 6 7 11 12 13 14 14 15 16 27 28 37 42 42 52 52 53 53 53 54 54 64 65 67 68 69 69 70 70 71 71 72 72 77 78

Parsing method: LALR

state 0

    (0) S' -> . statement
    (1) statement -> .
    (2) statement -> . TYPE COLON decl_names
    (6) statement -> . TYPE COLON NAME ASSIGN value
    (7) statement -> . NAME ASSIGN value
    (8) statement -> . TYPE NO ARRAY COLON NAME ASSIGN init_array
    (14) statement -> . NAME L_S_BRACKET value R_S_BRACKET ASSIGN value
    (15) statement -> . NAME NO END NI value WO ADD
    (16) statement -> . value WO OUT
    (23) statement -> . CIRCLE NAME L_PAREN params R_PAREN
    (24) statement -> . CIRCLE TYPE COLON NAME L_PAREN params R_PAREN
    (25) statement -> . CIRCLE TYPE NO ARRAY COLON NAME L_PAREN params R_PAREN
    (30) statement -> . NAME L_PAREN args R_PAREN
    (31) statement -> . NAME ASSIGN NAME L_PAREN args R_PAREN
    (32) statement -> . TYPE COLON NAME ASSIGN NAME L_PAREN args R_PAREN
    (33) statement -> . TYPE NO ARRAY COLON NAME ASSIGN NAME L_PAREN args R_PAREN
    (34) statement -> . NAME NO END NI NAME L_PAREN args R_PAREN NO RETURN_VAL WO ADD
    (36) statement -> . RETURN
    (37) statement -> . RETURN value
    (38) statement -> . IF L_PAREN conditional R_PAREN
    (39) statement -> . ELSEIF L_PAREN conditional R_PAREN
    (40) statement -> . ELSE
    (41) statement -> . ENDIF
    (54) statement -> . FOR L_PAREN NAME WO value KARA value MADE NUMBER ZUTSU incdec R_PAREN
    (57) statement -> . ENDFOR
    (58) statement -> . WHILE L_PAREN conditional R_PAREN
    (59) statement -> . DO
    (35) value -> . POW L_PAREN args R_PAREN
    (60) value -> . NUMBER
    (61) value -> . FLOAT
    (62) value -> . NAME
    (63) value -> . STRING
    (64) value -> . NAME L_S_BRACKET value R_S_BRACKET
    (65) value -> . NAME L_S_BRACKET value R_S_BRACKET NO VALUE
    (66) value -> . NAME NO ARR_LEN
    (67) value -> . L_PAREN value R_PAREN
    (68) value -> . L_PAREN value R_PAREN NO RESULT
    (69) value -> . value PLUS value
    (70) value -> . value MINUS value
    (71) value -> . value MULTI value
    (72) value -> . value DIVID value division_tail
    (77) value -> . value NO DECIMAL_P BELOW WO ROUNDED_UP VALUE
    (78) value -> . L_PAREN value R_PAREN NO DECIMAL_P BELOW WO ROUNDED_UP VALUE

    $end            reduce using rule 1 (statement -> .)
    TYPE            shift and go to state 2
    NAME            shift and go to state 3
    CIRCLE          shift and go to state 5
    RETURN          shift and go to state 7
    IF              shift and go to state 8
    ELSEIF          shift and go to state 9
    ELSE            shift and go to state 10
    ENDIF           shift and go to state 11
    FOR             shift and go to state 12
    ENDFOR          shift and go to state 14
    WHILE           shift and go to state 15
    DO              shift and go to state 16
    POW             shift and go to state 17
    NUMBER          shift and go to state 13
    FLOAT           shift and go to state 18
    STRING          shift and go to state 19
    L_PAREN         shift and go to state 6

    statement                      shift and go to state 1
    value                          shift and go to state 4

state 1

    (0) S' -> statement .



state 2

    (2) statement -> TYPE . COLON decl_names
    (6) statement -> TYPE . COLON NAME ASSIGN value
    (8) statement -> TYPE . NO ARRAY COLON NAME ASSIGN init_array
    (32) statement -> TYPE . COLON NAME ASSIGN NAME L_PAREN args R_PAREN
    (33) statement -> TYPE . NO ARRAY COLON NAME ASSIGN NAME L_PAREN args R_PAREN

    COLON           shift and go to state 20
    NO              shift and go to state 21


state 3

    (7) statement -> NAME . ASSIGN value
    (14) statement -> NAME . L_S_BRACKET value R_S_BRACKET ASSIGN value
    (15) statement -> NAME . NO END NI value WO ADD
    (30) statement -> NAME . L_PAREN args R_PAREN
    (31) statement -> NAME . ASSIGN NAME L_PAREN args R_PAREN
    (34) statement -> NAME . NO END NI NAME L_PAREN args R_PAREN NO RETURN_VAL WO ADD
    (62) value -> NAME .
    (64) value -> NAME . L_S_BRACKET value R_S_BRACKET
    (65) value -> NAME . L_S_BRACKET value R_S_BRACKET NO VALUE
    (66) value -> NAME . NO ARR_LEN

  ! shift/reduce conflict for NO resolved as shift
    ASSIGN          shift and go to state 22
    L_S_BRACKET     shift and go to state 23
    NO              shift and go to state 24
    L_PAREN         shift and go to state 25
    WO              reduce using rule 62 (value -> NAME .)
    PLUS            reduce using rule 62 (value -> NAME .)
    MINUS           reduce using rule 62 (value -> NAME .)
    MULTI           reduce using rule 62 (value -> NAME .)
    DIVID           reduce using rule 62 (value -> NAME .)

  ! NO              [ reduce using rule 62 (value -> NAME .) ]


state 4

    (16) statement -> value . WO OUT
    (69) value -> value . PLUS value
    (70) value -> value . MINUS value
    (71) value -> value . MULTI value
    (72) value -> value . DIVID value division_tail
    (77) value -> value . NO DECIMAL_P BELOW WO ROUNDED_UP VALUE

    WO              shift and go to state 26
    PLUS            shift and go to state 27
    MINUS           shift and go to state 28
    MULTI           shift and go to state 29
    DIVID           shift and go to state 30
    NO              shift and go to state 31


state 5

    (23) statement -> CIRCLE . NAME L_PAREN params R_PAREN
    (24) statement -> CIRCLE . TYPE COLON NAME L_PAREN params R_PAREN
    (25) statement -> CIRCLE . TYPE NO ARRAY COLON NAME L_PAREN params R_PAREN

    NAME            shift and go to state 32
    TYPE            shift and go to state 33


state 6

    (67) value -> L_PAREN . value R_PAREN
    (68) value -> L_PAREN . value R_PAREN NO RESULT
    (78) value -> L_PAREN . value R_PAREN NO DECIMAL_P BELOW WO ROUNDED_UP VALUE
    (35) value -> . POW L_PAREN args R_PAREN
    (60) value -> . NUMBER
    (61) value -> . FLOAT
    (62) value -> . NAME
    (63) value -> . STRING
    (64) value -> . NAME L_S_BRACKET value R_S_BRACKET
    (65) value -> . NAME L_S_BRACKET value R_S_BRACKET NO VALUE
    (66) value -> . NAME NO ARR_LEN
    (67) value -> . L_PAREN value R_PAREN
    (68) value -> . L_PAREN value R_PAREN NO RESULT
    (69) value -> . value PLUS value
    (70) value -> . value MINUS value
    (71) value -> . value MULTI value
    (72) value -> . value DIVID value division_tail
    (77) value -> . value NO DECIMAL_P BELOW WO ROUNDED_UP VALUE
    (78) value -> . L_PAREN value R_PAREN NO DECIMAL_P BELOW WO ROUNDED_UP VALUE

    POW             shift and go to state 17
    NUMBER          shift and go to state 13
    FLOAT           shift and go to state 18
    NAME            shift and go to state 35
    STRING          shift and go to state 19
    L_PAREN         shift and go to state 6

    value                          shift and go to state 34

state 7

    (36) statement -> RETURN .
    (37) statement -> RETURN . value
    (35) value -> . POW L_PAREN args R_PAREN
    (60) value -> . NUMBER
    (61) value -> . FLOAT
    (62) value -> . NAME
    (63) value -> . STRING
    (64) value -> . NAME L_S_BRACKET value R_S_BRACKET
    (65) value -> . NAME L_S_BRACKET value R_S_BRACKET NO VALUE
    (66) value -> . NAME NO ARR_LEN
    (67) value -> . L_PAREN value R_PAREN
    (68) value -> . L_PAREN value R_PAREN NO RESULT
    (69) value -> . value PLUS value
    (70) value -> . value MINUS value
    (71) value -> . value MULTI value
    (72) value -> . value DIVID value division_tail
    (77) value -> . value NO DECIMAL_P BELOW WO ROUNDED_UP VALUE
    (78) value -> . L_PAREN value R_PAREN NO DECIMAL_P BELOW WO ROUNDED_UP VALUE

    $end            reduce using rule 36 (statement -> RETURN .)
    POW             shift and go to state 17
    NUMBER          shift and go to state 13
    FLOAT           shift and go to state 18
    NAME            shift and go to state 35
    STRING          shift and go to state 19
    L_PAREN         shift and go to state 6

    value                          shift and go to state 36

state 8

    (38) statement -> IF . L_PAREN conditional R_PAREN

    L_PAREN         shift and go to state 37


state 9

    (39) statement -> ELSEIF . L_PAREN conditional R_PAREN

    L_PAREN         shift and go to state 38


state 10

    (40) statement -> ELSE .

    $end            reduce using rule 40 (statement -> ELSE .)


state 11

    (41) statement -> ENDIF .

    $end            reduce using rule 41 (statement -> ENDIF .)


state 12

    (54) statement -> FOR . L_PAREN NAME WO value KARA value MADE NUMBER ZUTSU incdec R_PAREN

    L_PAREN         shift and go to state 39


state 13

    (60) value -> NUMBER .

    WO              reduce using rule 60 (value -> NUMBER .)
    PLUS            reduce using rule 60 (value -> NUMBER .)
    MINUS           reduce using rule 60 (value -> NUMBER .)
    MULTI           reduce using rule 60 (value -> NUMBER .)
    DIVID           reduce using rule 60 (value -> NUMBER .)
    NO              reduce using rule 60 (value -> NUMBER .)
    R_PAREN         reduce using rule 60 (value -> NUMBER .)
    $end            reduce using rule 60 (value -> NUMBER .)
    R_S_BRACKET     reduce using rule 60 (value -> NUMBER .)
    COMMA           reduce using rule 60 (value -> NUMBER .)
    DIVREAL         reduce using rule 60 (value -> NUMBER .)
    GA              reduce using rule 60 (value -> NUMBER .)
    EQUAL           reduce using rule 60 (value -> NUMBER .)
    NOT             reduce using rule 60 (value -> NUMBER .)
    NOT2            reduce using rule 60 (value -> NUMBER .)
    LESS            reduce using rule 60 (value -> NUMBER .)
    LESS_EQUAL      reduce using rule 60 (value -> NUMBER .)
    GREATER         reduce using rule 60 (value -> NUMBER .)
    GREATER_EQUAL   reduce using rule 60 (value -> NUMBER .)
    DE              reduce using rule 60 (value -> NUMBER .)
    TO              reduce using rule 60 (value -> NUMBER .)
    KARA            reduce using rule 60 (value -> NUMBER .)
    MADE            reduce using rule 60 (value -> NUMBER .)
    KO              reduce using rule 60 (value -> NUMBER .)
    R_C_BRACKET     reduce using rule 60 (value -> NUMBER .)


state 14

    (57) statement -> ENDFOR .

    $end            reduce using rule 57 (statement -> ENDFOR .)


state 15

    (58) statement -> WHILE . L_PAREN conditional R_PAREN

    L_PAREN         shift and go to state 40


state 16

    (59) statement -> DO .

    $end            reduce using rule 59 (statement -> DO .)


state 17

    (35) value -> POW . L_PAREN args R_PAREN

    L_PAREN         shift and go to state 41


state 18

    (61) value -> FLOAT .

    WO              reduce using rule 61 (value -> FLOAT .)
    PLUS            reduce using rule 61 (value -> FLOAT .)
    MINUS           reduce using rule 61 (value -> FLOAT .)
    MULTI           reduce using rule 61 (value -> FLOAT .)
    DIVID           reduce using rule 61 (value -> FLOAT .)
    NO              reduce using rule 61 (value -> FLOAT .)
    R_PAREN         reduce using rule 61 (value -> FLOAT .)
    $end            reduce using rule 61 (value -> FLOAT .)
    R_S_BRACKET     reduce using rule 61 (value -> FLOAT .)
    COMMA           reduce using rule 61 (value -> FLOAT .)
    DIVREAL         reduce using rule 61 (value -> FLOAT .)
    GA              reduce using rule 61 (value -> FLOAT .)
    EQUAL           reduce using rule 61 (value -> FLOAT .)
    NOT             reduce using rule 61 (value -> FLOAT .)
    NOT2            reduce using rule 61 (value -> FLOAT .)
    LESS            reduce using rule 61 (value -> FLOAT .)
    LESS_EQUAL      reduce using rule 61 (value -> FLOAT .)
    GREATER         reduce using rule 61 (value -> FLOAT .)
    GREATER_EQUAL   reduce using rule 61 (value -> FLOAT .)
    DE              reduce using rule 61 (value -> FLOAT .)
    TO              reduce using rule 61 (value -> FLOAT .)
    KARA            reduce using rule 61 (value -> FLOAT .)
    MADE            reduce using rule 61 (value -> FLOAT .)
    KO              reduce using rule 61 (value -> FLOAT .)
    R_C_BRACKET     reduce using rule 61 (value -> FLOAT .)


state 19

    (63) value -> STRING .

    WO              reduce using rule 63 (value -> STRING .)
    PLUS            reduce using rule 63 (value -> STRING .)
    MINUS           reduce using rule 63 (value -> STRING .)
    MULTI           reduce using rule 63 (value -> STRING .)
    DIVID           reduce using rule 63 (value -> STRING .)
    NO              reduce using rule 63 (value -> STRING .)
    R_PAREN         reduce using rule 63 (value -> STRING .)
    $end            reduce using rule 63 (value -> STRING .)
    R_S_BRACKET     reduce using rule 63 (value -> STRING .)
    COMMA           reduce using rule 63 (value -> STRING .)
    DIVREAL         reduce using rule 63 (value -> STRING .)
    GA              reduce using rule 63 (value -> STRING .)
    EQUAL           reduce using rule 63 (value -> STRING .)
    NOT             reduce using rule 63 (value -> STRING .)
    NOT2            reduce using rule 63 (value -> STRING .)
    LESS            reduce using rule 63 (value -> STRING .)
    LESS_EQUAL      reduce using rule 63 (value -> STRING .)
    GREATER         reduce using rule 63 (value -> STRING .)
    GREATER_EQUAL   reduce using rule 63 (value -> STRING .)
    DE              reduce using rule 63 (value -> STRING .)
    TO              reduce using rule 63 (value -> STRING .)
    KARA            reduce using rule 63 (value -> STRING .)
    MADE            reduce using rule 63 (value -> STRING .)
    KO              reduce using rule 63 (value -> STRING .)
    R_C_BRACKET     reduce using rule 63 (value -> STRING .)


state 20

    (2) statement -> TYPE COLON . decl_names
    (6) statement -> TYPE COLON . NAME ASSIGN value
    (32) statement -> TYPE COLON . NAME ASSIGN NAME L_PAREN args R_PAREN
    (3) decl_names -> . NAME decl_names_m

    NAME            shift and go to state 43

    decl_names                     shift and go to state 42

state 21

    (8) statement -> TYPE NO . ARRAY COLON NAME ASSIGN init_array
    (33) statement -> TYPE NO . ARRAY COLON NAME ASSIGN NAME L_PAREN args R_PAREN

    ARRAY           shift and go to state 44


state 22

    (7) statement -> NAME ASSIGN . value
    (31) statement -> NAME ASSIGN . NAME L_PAREN args R_PAREN
    (35) value -> . POW L_PAREN args R_PAREN
    (60) value -> . NUMBER
    (61) value -> . FLOAT
    (62) value -> . NAME
    (63) value -> . STRING
    (64) value -> . NAME L_S_BRACKET value R_S_BRACKET
    (65) value -> . NAME L_S_BRACKET value R_S_BRACKET NO VALUE
    (66) value -> . NAME NO ARR_LEN
    (67) value -> . L_PAREN value R_PAREN
    (68) value -> . L_PAREN value R_PAREN NO RESULT
    (69) value -> . value PLUS value
    (70) value -> . value MINUS value
    (71) value -> . value MULTI value
    (72) value -> . value DIVID value division_tail
    (77) value -> . value NO DECIMAL_P BELOW WO ROUNDED_UP VALUE
    (78) value -> . L_PAREN value R_PAREN NO DECIMAL_P BELOW WO ROUNDED_UP VALUE

    NAME            shift and go to state 45
    POW             shift and go to state 17
    NUMBER          shift and go to state 13
    FLOAT           shift and go to state 18
    STRING          shift and go to state 19
    L_PAREN         shift and go to state 6

    value                          shift and go to state 46

state 23

    (14) statement -> NAME L_S_BRACKET . value R_S_BRACKET ASSIGN value
    (64) value -> NAME L_S_BRACKET . value R_S_BRACKET
    (65) value -> NAME L_S_BRACKET . value R_S_BRACKET NO VALUE
    (35) value -> . POW L_PAREN args R_PAREN
    (60) value -> . NUMBER
    (61) value -> . FLOAT
    (62) value -> . NAME
    (63) value -> . STRING
    (64) value -> . NAME L_S_BRACKET value R_S_BRACKET
    (65) value -> . NAME L_S_BRACKET value R_S_BRACKET NO VALUE
    (66) value -> . NAME NO ARR_LEN
    (67) value -> . L_PAREN value R_PAREN
    (68) value -> . L_PAREN value R_PAREN NO RESULT
    (69) value -> . value PLUS value
    (70) value -> . value MINUS value
    (71) value -> . value MULTI value
    (72) value -> . value DIVID value division_tail
    (77) value -> . value NO DECIMAL_P BELOW WO ROUNDED_UP VALUE
    (78) value -> . L_PAREN value R_PAREN NO DECIMAL_P BELOW WO ROUNDED_UP VALUE

    POW             shift and go to state 17
    NUMBER          shift and go to state 13
    FLOAT           shift and go to state 18
    NAME            shift and go to state 35
    STRING          shift and go to state 19
    L_PAREN         shift and go to state 6

    value                          shift and go to state 47

state 24

    (15) statement -> NAME NO . END NI value WO ADD
    (34) statement -> NAME NO . END NI NAME L_PAREN args R_PAREN NO RETURN_VAL WO ADD
    (66) value -> NAME NO . ARR_LEN

    END             shift and go to state 48
    ARR_LEN         shift and go to state 49


state 25

    (30) statement -> NAME L_PAREN . args R_PAREN
    (26) args -> .
    (27) args -> . value args_m
    (35) value -> . POW L_PAREN args R_PAREN
    (60) value -> . NUMBER
    (61) value -> . FLOAT
    (62) value -> . NAME
    (63) value -> . STRING
    (64) value -> . NAME L_S_BRACKET value R_S_BRACKET
    (65) value -> . NAME L_S_BRACKET value R_S_BRACKET NO VALUE
    (66) value -> . NAME NO ARR_LEN
    (67) value -> . L_PAREN value R_PAREN
    (68) value -> . L_PAREN value R_PAREN NO RESULT
    (69) value -> . value PLUS value
    (70) value -> . value MINUS value
    (71) value -> . value MULTI value
    (72) value -> . value DIVID value division_tail
    (77) value -> . value NO DECIMAL_P BELOW WO ROUNDED_UP VALUE
    (78) value -> . L_PAREN value R_PAREN NO DECIMAL_P BELOW WO ROUNDED_UP VALUE

    R_PAREN         reduce using rule 26 (args -> .)
    POW             shift and go to state 17
    NUMBER          shift and go to state 13
    FLOAT           shift and go to state 18
    NAME            shift and go to state 35
    STRING          shift and go to state 19
    L_PAREN         shift and go to state 6

    args                           shift and go to state 50
    value                          shift and go to state 51

state 26

    (16) statement -> value WO . OUT

    OUT             shift and go to state 52


state 27

    (69) value -> value PLUS . value
    (35) value -> . POW L_PAREN args R_PAREN
    (60) value -> . NUMBER
    (61) value -> . FLOAT
    (62) value -> . NAME
    (63) value -> . STRING
    (64) value -> . NAME L_S_BRACKET value R_S_BRACKET
    (65) value -> . NAME L_S_BRACKET value R_S_BRACKET NO VALUE
    (66) value -> . NAME NO ARR_LEN
    (67) value -> . L_PAREN value R_PAREN
    (68) value -> . L_PAREN value R_PAREN NO RESULT
    (69) value -> . value PLUS value
    (70) value -> . value MINUS value
    (71) value -> . value MULTI value
    (72) value -> . value DIVID value division_tail
    (77) value -> . value NO DECIMAL_P BELOW WO ROUNDED_UP VALUE
    (78) value -> . L_PAREN value R_PAREN NO DECIMAL_P BELOW WO ROUNDED_UP VALUE

    POW             shift and go to state 17
    NUMBER          shift and go to state 13
    FLOAT           shift and go to state 18
    NAME            shift and go to state 35
    STRING          shift and go to state 19
    L_PAREN         shift and go to state 6

    value                          shift and go to state 53

state 28

    (70) value -> value MINUS . value
    (35) value -> . POW L_PAREN args R_PAREN
    (60) value -> . NUMBER
    (61) value -> . FLOAT
    (62) value -> . NAME
    (63) value -> . STRING
    (64) value -> . NAME L_S_BRACKET value R_S_BRACKET
    (65) value -> . NAME L_S_BRACKET value R_S_BRACKET NO VALUE
    (66) value -> . NAME NO ARR_LEN
    (67) value -> . L_PAREN value R_PAREN
    (68) value -> . L_PAREN value R_PAREN NO RESULT
    (69) value -> . value PLUS value
    (70) value -> . value MINUS value
    (71) value -> . value MULTI value
    (72) value -> . value DIVID value division_tail
    (77) value -> . value NO DECIMAL_P BELOW WO ROUNDED_UP VALUE
    (78) value -> . L_PAREN value R_PAREN NO DECIMAL_P BELOW WO ROUNDED_UP VALUE

    POW             shift and go to state 17
    NUMBER          shift and go to state 13
    FLOAT           shift and go to state 18
    NAME            shift and go to state 35
    STRING          shift and go to state 19
    L_PAREN         shift and go to state 6

    value                          shift and go to state 54

state 29

    (71) value -> value MULTI . value
    (35) value -> . POW L_PAREN args R_PAREN
    (60) value -> . NUMBER
    (61) value -> . FLOAT
    (62) value -> . NAME
    (63) value -> . STRING
    (64) value -> . NAME L_S_BRACKET value R_S_BRACKET
    (65) value -> . NAME L_S_BRACKET value R_S_BRACKET NO VALUE
    (66) value -> . NAME NO ARR_LEN
    (67) value -> . L_PAREN value R_PAREN
    (68) value -> . L_PAREN value R_PAREN NO RESULT
    (69) value -> . value PLUS value
    (70) value -> . value MINUS value
    (71) value -> . value MULTI value
    (72) value -> . value DIVID value division_tail
    (77) value -> . value NO DECIMAL_P BELOW WO ROUNDED_UP VALUE
    (78) value -> . L_PAREN value R_PAREN NO DECIMAL_P BELOW WO ROUNDED_UP VALUE

    POW             shift and go to state 17
    NUMBER          shift and go to state 13
    FLOAT           shift and go to state 18
    NAME            shift and go to state 35
    STRING          shift and go to state 19
    L_PAREN         shift and go to state 6

    value                          shift and go to state 55

state 30

    (72) value -> value DIVID . value division_tail
    (35) value -> . POW L_PAREN args R_PAREN
    (60) value -> . NUMBER
    (61) value -> . FLOAT
    (62) value -> . NAME
    (63) value -> . STRING
    (64) value -> . NAME L_S_BRACKET value R_S_BRACKET
    (65) value -> . NAME L_S_BRACKET value R_S_BRACKET NO VALUE
    (66) value -> . NAME NO ARR_LEN
    (67) value -> . L_PAREN value R_PAREN
    (68) value -> . L_PAREN value R_PAREN NO RESULT
    (69) value -> . value PLUS value
    (70) value -> . value MINUS value
    (71) value -> . value MULTI value
    (72) value -> . value DIVID value division_tail
    (77) value -> . value NO DECIMAL_P BELOW WO ROUNDED_UP VALUE
    (78) value -> . L_PAREN value R_PAREN NO DECIMAL_P BELOW WO ROUNDED_UP VALUE

    POW             shift and go to state 17
    NUMBER          shift and go to state 13
    FLOAT           shift and go to state 18
    NAME            shift and go to state 35
    STRING          shift and go to state 19
    L_PAREN         shift and go to state 6

    value                          shift and go to state 56

state 31

    (77) value -> value NO . DECIMAL_P BELOW WO ROUNDED_UP VALUE

    DECIMAL_P       shift and go to state 57


state 32

    (23) statement -> CIRCLE NAME . L_PAREN params R_PAREN

    L_PAREN         shift and go to state 58


state 33

    (24) statement -> CIRCLE TYPE . COLON NAME L_PAREN params R_PAREN
    (25) statement -> CIRCLE TYPE . NO ARRAY COLON NAME L_PAREN params R_PAREN

    COLON           shift and go to state 59
    NO              shift and go to state 60


state 34

    (67) value -> L_PAREN value . R_PAREN
    (68) value -> L_PAREN value . R_PAREN NO RESULT
    (78) value -> L_PAREN value . R_PAREN NO DECIMAL_P BELOW WO ROUNDED_UP VALUE
    (69) value -> value . PLUS value
    (70) value -> value . MINUS value
    (71) value -> value . MULTI value
    (72) value -> value . DIVID value division_tail
    (77) value -> value . NO DECIMAL_P BELOW WO ROUNDED_UP VALUE

    R_PAREN         shift and go to state 61
    PLUS            shift and go to state 27
    MINUS           shift and go to state 28
    MULTI           shift and go to state 29
    DIVID           shift and go to state 30
    NO              shift and go to state 31


state 35

    (62) value -> NAME .
    (64) value -> NAME . L_S_BRACKET value R_S_BRACKET
    (65) value -> NAME . L_S_BRACKET value R_S_BRACKET NO VALUE
    (66) value -> NAME . NO ARR_LEN

  ! shift/reduce conflict for NO resolved as shift
    R_PAREN         reduce using rule 62 (value -> NAME .)
    PLUS            reduce using rule 62 (value -> NAME .)
    MINUS           reduce using rule 62 (value -> NAME .)
    MULTI           reduce using rule 62 (value -> NAME .)
    DIVID           reduce using rule 62 (value -> NAME .)
    $end            reduce using rule 62 (value -> NAME .)
    R_S_BRACKET     reduce using rule 62 (value -> NAME .)
    COMMA           reduce using rule 62 (value -> NAME .)
    WO              reduce using rule 62 (value -> NAME .)
    DIVREAL         reduce using rule 62 (value -> NAME .)
    GA              reduce using rule 62 (value -> NAME .)
    EQUAL           reduce using rule 62 (value -> NAME .)
    NOT             reduce using rule 62 (value -> NAME .)
    NOT2            reduce using rule 62 (value -> NAME .)
    LESS            reduce using rule 62 (value -> NAME .)
    LESS_EQUAL      reduce using rule 62 (value -> NAME .)
    GREATER         reduce using rule 62 (value -> NAME .)
    GREATER_EQUAL   reduce using rule 62 (value -> NAME .)
    DE              reduce using rule 62 (value -> NAME .)
    TO              reduce using rule 62 (value -> NAME .)
    KARA            reduce using rule 62 (value -> NAME .)
    MADE            reduce using rule 62 (value -> NAME .)
    KO              reduce using rule 62 (value -> NAME .)
    R_C_BRACKET     reduce using rule 62 (value -> NAME .)
    L_S_BRACKET     shift and go to state 62
    NO              shift and go to state 63

  ! NO              [ reduce using rule 62 (value -> NAME .) ]


state 36

    (37) statement -> RETURN value .
    (69) value -> value . PLUS value
    (70) value -> value . MINUS value
    (71) value -> value . MULTI value
    (72) value -> value . DIVID value division_tail
    (77) value -> value . NO DECIMAL_P BELOW WO ROUNDED_UP VALUE
